--- a/homeworks/catapp-wth-mongoose/package.json
+++ b/homeworks/catapp-wth-mongoose/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^2.0.1",
+    "kerberos": "0.0.18",
+    "mongoose": "^4.4.2",
     "morgan": "^1.6.1"
   }
 }
